--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Countries API</title>
+    <title>Parcial API</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="dark">
-    <header>
+<body>
+    <header class="header">
         <div class="container">
-            <h1>Where in the world?</h1>
-            <button class="btn-toggle" id="toggle">
-                <i class="far fa-moon"></i>
-                <i class="fas fa-moon"></i>
-                 Dark Mode
-            </button>
+            <div class="title">Where in the world?</div>
+            <div class="mode-select">
+                <i class="fas fa-moon mode-icon"></i>
+                <p>Dark mode</p>
+            </div>
         </div>
     </header>
 
