--- a/index.html
+++ b/index.html
@@ -4,60 +4,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parcial API</title>
+    <title>Countries API</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
-    <header class="header">
+<body class="dark">
+    <header>
         <div class="container">
-            <div class="title">Where in the world?</div>
-            <div class="mode-select">
-                <i class="fas fa-moon mode-icon"></i>
-                <p>Dark mode</p>
-            </div>
+            <h1>Where in the world?</h1>
+            <button class="btn-toggle" id="toggle">
+                <i class="far fa-moon"></i>
+                <i class="fas fa-moon"></i>
+                 Dark Mode
+            </button>
         </div>
     </header>
 
-    <main class="main">
-        <div class="search-filter">
-          <input
-            type="text"
-            class="search"
-            placeholder="Search for a country..."
-          />
-          <i class="fas fa-search search-icon"></i>
-  
-          <div class="filter">
-            <div class="filter-tab">
-              Filter by Region
-              <i class="fas fa-chevron-down filter-icon"></i>
-            </div>
-            <ul class="filter-options hidden">
-              <li class="filter-option">Africa</li>
-              <li class="filter-option">Americas</li>
-              <li class="filter-option">Asia</li>
-              <li class="filter-option">Europe</li>
-              <li class="filter-option">Oceania</li>
-            </ul>
-          </div>
-        </div>
-  
-        <div class="countries"></div>
-  
-        <div class="page-buttons"></div>
-      </main>
-
-      <section class="detail hidden">
+    <section>
         <div class="container">
-          <button class="back-button">
-            <i class="fas fa-arrow-left"></i>
-            Back
-          </button>
-  
-          <div class="country-detail"></div>
+            <input id="search" class="search" type="text" placeholder="Search for a country" name="search">
+            <label for="#search"></label>
+            <div class="dropdown" id="filter">
+                Filter by Region <i class="fas fa-chevron-down"></i>
+                <ul>
+                    <li>All</li>
+                    <li>Africa</li>
+                    <li>Americas</li>
+                    <li>Asia</li>
+                    <li>Europe</li>
+                    <li>Oceania</li>
+                </ul>
+            </div>
+
         </div>
-      </section>
+    </section>
+
+    <div class="modal" id="modal">
+        <button id="close" class="btn-close"><i class="fas fa-long-arrow-alt-left"></i> Back</button>
+        <div class="image-div">
+
+            <img src="" alt="">
+        </div>
+        <div class="modal-upper">
+            <h2 class="country-name">Country</h2>
+            <p class="native-name"></p>
+            <p class="population"></p>
+            <p class="region"></p>
+            <p class="sub-region"></p>
+            <p class="capital"></p>
+        </div>
+        <div class="modal-middle">
+            <p class="domain"></p>
+            <p class="currency"></p>
+            <p class="language"></p>
+        </div>
+        <div class="border"></div>
+    </div>
+    <!-- modal-->
+
+
+    <section>
+        <div class="container" id="countries">
+
+            <h2>Countries Loading...</h2>
+        </div>
+    </section>
+
 </body>
 
 </html>
