se agrega el json con los paises

--- a/index.html
+++ b/index.html
@@ -60,8 +60,6 @@
         </div>
         <div class="border"></div>
     </div>
-    <!-- modal-->
-
 
     <section>
         <div class="container" id="countries">
@@ -69,7 +67,7 @@
             <h2>Countries Loading...</h2>
         </div>
     </section>
-
+    <script src="./js/api.js" type="module"></script>
 </body>
 
 </html>
