--- a/html/white.html
+++ b/html/white.html
@@ -66,7 +66,7 @@
             <h2>Countries Loading...</h2>
         </div>
     </section>
-
+    <script src="./js/api.js" type="module"></script>
 
 
 
