--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Countries API</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" />
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -42,7 +43,6 @@
     <div class="modal" id="modal">
         <button id="close" class="btn-close"><i class="fas fa-long-arrow-alt-left"></i> Back</button>
         <div class="image-div">
-
             <img src="" alt="">
         </div>
         <div class="modal-upper">
