se arregla boton inferior derecho

--- a/html/white.html
+++ b/html/white.html
@@ -9,14 +9,13 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
-<body class="dark">
+<body class="light">
     <header>
         <div class="container">
             <h1>Where in the world?</h1>
             <button class="btn-toggle" id="toggle">
-                <i class="far fa-moon"></i>
-                <i class="fas fa-moon"></i>
-                 Dark Mode
+                <i class="fas fa-moon">  Dark  Mode</i>
+                <i class="far fa-sun">  Light  Mode</i>
             </button>
         </div>
     </header>
